added the redis cache and front end changed